# lego-price-predictor

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/raw/: .gitignore  google_trends.dvc  rebrickable.dvc  used_prices.dvc
notebooks/: rebrickable_data_exploration.ipynb
src/: project_paths.py
src/data/sources/: base_source.py  inventories_data_source.py  inventory_minifigs_data_source.py  inventory_parts_data_source.py  minifigs_data_source.py  parts_data_source.py  sets_data_source.py  theme_trending_score_data_source.py  themes_data_source.py  used_set_prices_data_source.py
