[tool.poetry]
name = "lego-price-predictor"
version = "0.1.0"
description = "Training project that uses regression algorithms to predict future price of lego sets."
authors = ["Konstanty Orzeszko <konstanty.orzeszko@gmail.com>"]
license = "GPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.9"


[tool.poetry.group.dev.dependencies]
dvc = {extras = ["azure"], version = "^3.64.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
